# PiAlarm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  conandata.yml  conanfile.txt
.github/workflows/: build.yml
include/: alarm.h  alarms_vector.h  api.h  application_controller.h  button_handler.h  buzzer.h  hardware_manager.h  util.h
src/: alarm.cpp  alarms_vector.cpp  api.cpp  application_controller.cpp  button_handler.cpp  buzzer.cpp  hardware_manager.cpp  main.cpp  util.cpp
